Refactor layout and styling; remove unused components
- Simplified `MainLayout.razor` by removing sidebar and navigation.
- Deleted `Counter.razor`, `Home.razor`, and `Weather.razor` files.
- Updated `launchSettings.json` to prevent automatic browser launch.
- Significant changes to `app.css`, transitioning to `site.css` for styling.
- Introduced new Razor components for better modularity.
- Added `LobbyPage.razor` for game lobby functionality.
- Created `package.json` and `package-lock.json` for Tailwind CSS integration.

--- a/BlazorApp/Properties/launchSettings.json
+++ b/BlazorApp/Properties/launchSettings.json
@@ -1,22 +1,12 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
-  "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "http://localhost:5247",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
+  "profiles": {    
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
-      "applicationUrl": "https://localhost:7219;http://localhost:5247",
+      "applicationUrl": "https://localhost:7219",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
