Add unit tests for Hearts.Contracts in CI pipeline
This update modifies the `ci.yml` file to include a new test command for the `Hearts.Contracts.UnitTests` project. Both `Hearts.Api.UnitTests` and `Hearts.Contracts.UnitTests` will now be executed during the CI process, enhancing test coverage.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
             dotnet test --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover \
             test/Hearts.Api.UnitTests/Hearts.Api.UnitTests.csproj
+
+            dotnet test --no-build --verbosity normal /p:CollectCoverage=true /p:CoverletOutputFormat=opencover \
+            test/Hearts.Contracts.UnitTests/Hearts.Contracts.UnitTests.csproj
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
