Enhance UI with dark mode and layout improvements
- Updated `.editorconfig` for file-scoped namespace declarations.
- Added response compression in `Program.cs`.
- Modified modal background opacity in `ModalDialog.razor`.
- Redesigned `MainLayout.razor` to include a responsive `NavBar`.
- Improved layout and styling in `GameTable.razor`.
- Increased padding and updated text colors for dark mode in `LobbyPage.razor`.
- Added logging for connection events in `SignalRService.cs`.
- Renamed `IJSRuntime` variable in `LocalStorageService.cs` for consistency.
- Implemented dark mode support and custom fonts in `tailwind.config.js`.
- Enhanced utility classes in `site.css` for new design requirements.
- Updated `index.html` for dark mode styling and visibility.
- Introduced JavaScript helper for dark mode in `localStorage.js`.
- Added functions for toggling dark mode in `site.js`.
- Created a new `NavBar` component with light/dark mode toggle functionality.

--- a/.editorconfig
+++ b/.editorconfig
@@ -146,7 +146,7 @@ csharp_style_prefer_index_operator = true:suggestion
 csharp_style_prefer_range_operator = true:suggestion
 csharp_style_pattern_local_over_anonymous_function = true:suggestion
 csharp_style_deconstructed_variable_declaration = true:suggestion
-csharp_style_namespace_declarations = block_scoped:silent
+csharp_style_namespace_declarations = file_scoped:silent
 
 # Space preferences
 csharp_space_after_cast = false
