Update game architecture with Marten integration
- Updated package versions in Directory.Packages.props.
- Added NuGet.config to the solution.
- Refactored GameActor to use IDocumentStore and handle events.
- Enhanced Round and Trick classes with new properties and methods.
- Introduced new event classes for game state management.
- Created GameProjection for event sourcing with Marten.
- Refactored Program.cs for improved service configuration.
- Updated unit tests to reflect changes in GameActor.
- Added HostingExtensions for middleware setup.
- Overall improvements for event-driven architecture and state management.

--- a/src/Hearts.Api/Hearts.Api.csproj
+++ b/src/Hearts.Api/Hearts.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.Result" />
     <PackageReference Include="Dapr.Actors.AspNetCore" />
+    <PackageReference Include="Marten" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" />
     <PackageReference Include="Microsoft.AspNetCore.SignalR" />
   </ItemGroup>
