--- a/src/Hearts.AppHost/Hearts.AppHost.csproj
+++ b/src/Hearts.AppHost/Hearts.AppHost.csproj
@@ -9,10 +9,10 @@
     <UserSecretsId>b99dbce4-17d4-41d2-858a-2b0529d60bb8</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting.AppHost" />
-    <PackageReference Include="Aspire.Hosting.Dapr" />
+    <PackageReference Include="Aspire.Hosting.AppHost" />    
     <PackageReference Include="Aspire.Hosting.PostgreSQL" />
     <PackageReference Include="Aspire.Hosting.Redis" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.Dapr" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Hearts.Api\Hearts.Api.csproj" />
